# smol-llm

./: .gitignore  README.md  pyproject.toml  requirements.txt
checkpoints/: .gitkeep
configs/: smoke.yaml  smol_25m.yaml
data/processed/: .gitkeep
data/raw/: tiny_sample.txt
data/tokenizer/: .gitkeep
docs/: architecture_notes.md
logs/: .gitkeep
scripts/: eval.py  generate.py  inspect_corpus.py  prepare_data.py  sample_corpus.py  stream_finenews_text.py  train.py  train_tokenizer.py
smol_llm/: __init__.py  config.py  dataset.py  generation.py  model.py  tokenizer.py  trainer.py  utils.py
tests/: test_dataset.py  test_generation.py  test_model.py
