[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smol-llm"
version = "0.1.0"
description = "A tiny GPT-style language model built from scratch for local experimentation."
requires-python = ">=3.10"
dependencies = []

[tool.setuptools]
packages = ["smol_llm"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
